# 18fa3-regression-prover

./: Cargo.toml  README.md
guest/: Cargo.toml
guest/src/: main.rs
host/: Cargo.toml  build.rs
host/src/: main.rs
sp1/: Cargo.toml
sp1/crates/core/executor/src/: air.rs  estimating.rs  program.rs  report.rs  syscall_code.rs
sp1/crates/core/executor/src/artifacts/: rv64im_costs.json
sp1/crates/core/executor/src/events/: byte.rs
sp1/crates/core/executor/src/vm/: gas.rs  syscall.rs
sp1/crates/core/machine/src/adapter/: bump.rs
sp1/crates/core/machine/src/adapter/register/: alu_type.rs  i_type.rs  j_type.rs  r_type.rs
sp1/crates/core/machine/src/bytes/: trace.rs
sp1/crates/core/machine/src/control_flow/branch/: trace.rs
sp1/crates/core/machine/src/control_flow/jal/: trace.rs
sp1/crates/core/machine/src/memory/: bump.rs  global.rs  local.rs  page_prot.rs
sp1/crates/core/machine/src/memory/instructions/load/: load_byte.rs  load_double.rs  load_half.rs  load_word.rs
sp1/crates/core/machine/src/memory/instructions/store/: store_byte.rs  store_double.rs  store_half.rs  (+1 more)
sp1/crates/core/machine/src/operations/: mul.rs  slt.rs
sp1/crates/core/machine/src/program/: instruction_fetch.rs
sp1/crates/core/machine/src/range/: trace.rs
sp1/crates/core/machine/src/syscall/: chip.rs
sp1/crates/core/machine/src/syscall/instructions/: columns.rs  trace.rs
sp1/crates/core/machine/src/utils/: logger.rs
sp1/crates/prover/src/worker/prover/: recursion.rs
sp1/crates/recursion/circuit/src/machine/: core.rs
sp1/crates/sdk/src/cpu/: builder.rs
(+4 files in other folders)
