[workspace]
members = ["guest", "host"]
resolver = "2"

[workspace.dependencies]
sp1-sdk = { path = "sp1/crates/sdk", features = ["blocking"] }
sp1-build = { path = "sp1/crates/build" }
sp1-zkvm = { path = "sp1/crates/zkvm/entrypoint" }
sp1-verifier = { path = "sp1/crates/verifier" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hex = "0.4"

[patch.crates-io]
sp1-sdk = { path = "sp1/crates/sdk" }
sp1-build = { path = "sp1/crates/build" }
sp1-zkvm = { path = "sp1/crates/zkvm/entrypoint" }
sp1-verifier = { path = "sp1/crates/verifier" }
