[package]
name = "rogue-host"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { workspace = true }
sp1-build = { workspace = true }
sp1-verifier = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }

[[bin]]
name = "bn254_to_koalabear"
path = "src/bin/bn254_to_koalabear.rs"

[build-dependencies]
sp1-build = { workspace = true }
